--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
 asgiref==3.7.2
+astroid==3.0.1
 autopep8==2.0.4
+dill==0.3.7
 Django==5.0
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 flake8==6.1.0
+inflection==0.5.1
 iniconfig==2.0.0
+isort==5.12.0
 mccabe==0.7.0
 mypy==1.7.1
 mypy-extensions==1.0.0
 packaging==23.2
+platformdirs==4.1.0
 pluggy==1.3.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
+pylint==3.0.2
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 pytest==7.4.3
 pytz==2023.3.post1
+PyYAML==6.0.1
 sqlparse==0.4.4
+tomlkit==0.12.3
 typing_extensions==4.8.0
+uritemplate==4.1.1
